# django-otp-twilio

./: .bumpversion.cfg  .coveragerc  .gitignore  .isort.cfg  CHANGES  CHANGES.rst  MANIFEST.in  Makefile  Pipfile  README  README.rst  manage.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yaml
docs/: Makefile  automake.sh  requirements.txt
docs/source/: conf.py  index.rst
otp_twilio/: admin.py  conf.py  models.py  tests.py
otp_twilio/fixtures/tests/: alice_and_bob.yaml
otp_twilio/migrations/: 0001_initial.py  0002_last_t.py  0003_longer_number.py
otp_twilio/south_migrations/: 0001_initial.py  0002_last_t.py  0003_increase_max_twilio_number_length.py
src/otp_twilio/: admin.py  apps.py  conf.py  models.py  tests.py
src/otp_twilio/migrations/: 0001_initial.py  0002_last_t.py  0003_longer_number.py  0004_sidechanneldevice.py
test/test_project/: settings.py  urls.py
