[project]
name = "django-otp-twilio"
version = "1.0.5"
description = "A django-otp plugin that delivers tokens via Twilio's SMS service."
readme = "README.rst"
requires-python = ">=3.7"
license = "Unlicense"
authors = [
    { name = "Peter Sagerson", email = "psagers@ignorare.net" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django-otp~=1.0",
    "requests",
]

[project.urls]
Homepage = "https://github.com/django-otp/django-otp-twilio"
Documentation = "https://django-otp-twilio.readthedocs.io/"


#
# Development
#

[tool.hatch.envs.default]
dependencies = [
    "black ~= 23.0",
    "bumpversion ~= 0.6.0",
    "coverage ~= 6.3",
    "flake8 ~= 4.0",
    "freezegun ~= 1.2.0",
    "isort ~= 5.10",
]

[tool.hatch.envs.default.env-vars]
PYTHONPATH = "test"
DJANGO_SETTINGS_MODULE = "test_project.settings"

[tool.hatch.envs.default.scripts]
manage = "python -m django {args}"

lint = [
    "flake8 src",
    "isort --check --quiet src",
    "black --check --quiet src",
]
fix = [
    "isort --quiet src",
    "black --quiet src",
]

test = "python -s -m django test {args:otp_twilio}"
check = ["lint", "test"]

warn = "python -Wd -s -m django test {args:otp_twilio}"
cov = [
    "coverage run -m django test {args:otp_twilio}",
    "coverage report",
]


[tool.hatch.envs.test.scripts]
run = "test"

[tool.hatch.envs.test.overrides]
matrix.django.dependencies = [
    { value = "django ~= 3.2.0", if = ["3.2"] },
    { value = "django ~= 4.1.0", if = ["4.1"] },
    { value = "django ~= 4.2.0", if = ["4.2"] },
]
matrix.mode.scripts = [
    { key = "run", value = "lint", if = ["lint"] },
    { key = "run", value = "cov", if = ["coverage"] },
]

[[tool.hatch.envs.test.matrix]]
mode = ["lint"]

# WARNING: When you update the Python versions, make sure to update
# .github/workflows/* as well.
[[tool.hatch.envs.test.matrix]]
python = ["3.7"]
django = ["3.2"]

[[tool.hatch.envs.test.matrix]]
python = ["3.11"]
django = ["4.1", "4.2"]

[[tool.hatch.envs.test.matrix]]
mode = ["coverage"]


[tool.hatch.envs.docs]
template = "docs"
dependencies = [
    "sphinx"
]

[tool.hatch.envs.docs.scripts]
make = "command make -C docs {args:html}"
open = "command xdg-open docs/build/html/index.html"


#
# Build
#

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/otp_twilio"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/test",
    "/CHANGES.rst",
]


#
# Other tools
#

[tool.isort]
profile = "black"
force_sort_within_sections = true

sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
known_django = ["django"]
skip_glob = ["**/migrations/*.py"]

[tool.black]
skip-string-normalization = true
exclude = 'migrations/.*\.py'
